--- a/Pipfile
+++ b/Pipfile
@@ -8,8 +8,12 @@ django = "~=3.1.0"
 djangorestframework = "*"
 django-cors-headers = "*"
 python-dotenv = "*"
+psycopg2-binary = "==2.8.5"
+whitenoise = "==5.1.0"
+gunicorn = "==19.9.0"
 
 [dev-packages]
+autopep8 = "*"
 
 [requires]
 python_version = "3.8"
