--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "engines" : { "node" : "=6.14.12" },
+  "engines" : { "node" : "6.14.12" },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
